atualizaçoes finais